[gd_scene load_steps=40 format=3 uid="uid://co11lqs3cpuyb"]

[ext_resource type="Script" path="res://game/monster/Monster 2/Monster2.gd" id="1_4jthf"]
[ext_resource type="Texture2D" uid="uid://die8toapequn2" path="res://game/hero/undead_shadow.png" id="2_3c0cq"]
[ext_resource type="Texture2D" uid="uid://8tv8fj74hwwy" path="res://game/monster/Monster 2/50x31 Monster 2 spritesheet without shadows.png" id="3_cu2qu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_amrof"]
atlas = ExtResource("3_cu2qu")
region = Rect2(0, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoj0l"]
atlas = ExtResource("3_cu2qu")
region = Rect2(50, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_eat3x"]
atlas = ExtResource("3_cu2qu")
region = Rect2(100, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnp7n"]
atlas = ExtResource("3_cu2qu")
region = Rect2(150, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_67u5o"]
atlas = ExtResource("3_cu2qu")
region = Rect2(200, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1gye"]
atlas = ExtResource("3_cu2qu")
region = Rect2(250, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_17sts"]
atlas = ExtResource("3_cu2qu")
region = Rect2(300, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywb85"]
atlas = ExtResource("3_cu2qu")
region = Rect2(350, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm3s1"]
atlas = ExtResource("3_cu2qu")
region = Rect2(400, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgm5q"]
atlas = ExtResource("3_cu2qu")
region = Rect2(450, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_es2rb"]
atlas = ExtResource("3_cu2qu")
region = Rect2(0, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy5ul"]
atlas = ExtResource("3_cu2qu")
region = Rect2(50, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt02m"]
atlas = ExtResource("3_cu2qu")
region = Rect2(100, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv22e"]
atlas = ExtResource("3_cu2qu")
region = Rect2(150, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_heqb4"]
atlas = ExtResource("3_cu2qu")
region = Rect2(200, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kbm8"]
atlas = ExtResource("3_cu2qu")
region = Rect2(250, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cesj"]
atlas = ExtResource("3_cu2qu")
region = Rect2(300, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_jf2t7"]
atlas = ExtResource("3_cu2qu")
region = Rect2(350, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_js85l"]
atlas = ExtResource("3_cu2qu")
region = Rect2(400, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4r5y"]
atlas = ExtResource("3_cu2qu")
region = Rect2(450, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3pw7"]
atlas = ExtResource("3_cu2qu")
region = Rect2(0, 0, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgkou"]
atlas = ExtResource("3_cu2qu")
region = Rect2(50, 0, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir407"]
atlas = ExtResource("3_cu2qu")
region = Rect2(100, 0, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ddg1"]
atlas = ExtResource("3_cu2qu")
region = Rect2(150, 0, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqqi2"]
atlas = ExtResource("3_cu2qu")
region = Rect2(200, 0, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb4mh"]
atlas = ExtResource("3_cu2qu")
region = Rect2(250, 0, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwnwd"]
atlas = ExtResource("3_cu2qu")
region = Rect2(0, 31, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_isp2l"]
atlas = ExtResource("3_cu2qu")
region = Rect2(50, 31, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_38cr4"]
atlas = ExtResource("3_cu2qu")
region = Rect2(100, 31, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7po5"]
atlas = ExtResource("3_cu2qu")
region = Rect2(150, 31, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_wle2i"]
atlas = ExtResource("3_cu2qu")
region = Rect2(200, 31, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_urj4b"]
atlas = ExtResource("3_cu2qu")
region = Rect2(250, 31, 50, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_mv18p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_amrof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoj0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eat3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnp7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67u5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1gye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17sts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywb85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm3s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgm5q")
}],
"loop": false,
"name": &"atk",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_es2rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy5ul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt02m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv22e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heqb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kbm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cesj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf2t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js85l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4r5y")
}],
"loop": false,
"name": &"die",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3pw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgkou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir407")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ddg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqqi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb4mh")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwnwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isp2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38cr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7po5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wle2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urj4b")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bvhe3"]
radius = 7.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kvuov"]
radius = 17.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ox6mo"]
radius = 126.321

[node name="Monster2" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 2147483648
motion_mode = 1
script = ExtResource("1_4jthf")
SPEED = 300.0
hurt = null
HP = null
knockback_def = null

[node name="UndeadShadow" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.7, 0.703)
texture = ExtResource("2_3c0cq")

[node name="body" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="body"]
position = Vector2(3, -7)
sprite_frames = SubResource("SpriteFrames_mv18p")
animation = &"atk"
frame = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -9)
shape = SubResource("CapsuleShape2D_bvhe3")

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]
radius = 7.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -8)
shape = SubResource("CircleShape2D_kvuov")

[node name="FindPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FindPlayer"]
shape = SubResource("CircleShape2D_ox6mo")

[node name="AtkTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="frame_changed" from="body/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="FindPlayer" to="." method="_on_find_player_body_entered"]
[connection signal="timeout" from="AtkTimer" to="." method="_on_atk_timer_timeout"]
